--- a/backend/app/views/home/index.html.erb
+++ b/backend/app/views/home/index.html.erb
@@ -31,7 +31,7 @@ $(document).ready(function($) {
 </div>
 </div>
 
-<% if can?(:manage, @menu) %>
+<% if can?(:manage, :menu) %>
 <nav class="navbar">
 	<div class="navbar-header">
 		<button aria-controls="navbar" aria-expanded="false" data-target="#navbar" data-toggle="collapse" class="navbar-toggle collapsed" type="button">
@@ -50,7 +50,7 @@ $(document).ready(function($) {
 
 				<a href="#" class="dropdown-toggle" aria-expanded="true" role="button" data-toggle="dropdown">
 					<p class="top_left"></p>
-					<p class="top_center"> Dashboard </p>
+					<p class="top_center"> <%= @menu.find_by(id: id.to_s.to_i).name  %> </p>
 					<p class="top_right"></p>
 					<div class="cl"></div>
 				</a>
