--- a/backend/app/views/admins/index.html.erb
+++ b/backend/app/views/admins/index.html.erb
@@ -1,21 +1,27 @@
-<nav class="navbar navbar-default navbar-fixed-top">
-<div class="container-fluid">
-<div class="navbar-header">
-<a href="/admin/" class="navbar-brand pjax">
-Backend
-<small>Admin</small>
-</a>
-</div>
-<div class="collapse navbar-collapse">
-<ul class="nav navbar-nav navbar-right root_links">
-<li class="dashboard_root_link"><a href="/admin/" class="pjax">Dashboard</a></li>
-<li><a href="/">Home</a></li>
-<li><a href="/">Home</a></li>
-<li><a href="/admin/user/2/edit">admin@gmail.com</a></li>
-<li><a href="/users/sign_out" data-method="delete" rel="nofollow"><span class="label label-danger">Log out</span></a></li>
-</ul>
 
+<div class="row">
+<div class="content" data-pjax-container="">
+<div class="page-header">
+<h1 style="font-size:36px">Site Administration</h1>
 </div>
-</div>
+<ol class="breadcrumb"><li class="active">Dashboard</li></ol>
+<table class="table table-condensed table-striped">
+<thead>
+<tr>
+<th class="shrink model-name">Data</th>
+<th class="shrink controls"></th>
+</tr>
+</thead>
+<tbody>
+<% @data.each do |d| %>
 
-</nav>
+<tr>
+  <td><%= link_to d.name, admins_url d.name.downcase  %></td>
+  <td></td>
+</tr>
+
+<% end %>
+</tbody>
+</table>
+</div>
+</div>
