--- a/backend/app/views/layouts/userpanel.html.erb
+++ b/backend/app/views/layouts/userpanel.html.erb
@@ -8,7 +8,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+
 <div class="container">
+<%= render 'layouts/header_user_panel' %>
 <%= yield %>
 </div>
 
