--- a/backend/app/assets/stylesheets/menus.scss
+++ b/backend/app/assets/stylesheets/menus.scss
@@ -3,6 +3,11 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
+.form-control{
+	height:23px !important;
+}
+
+
 #main .full_w {
 	background: none repeat scroll 0 0 #ffffff;
 	border: 1px solid #dcdde1;
