--- a/backend/app/views/home/password.html.erb
+++ b/backend/app/views/home/password.html.erb
@@ -1,12 +1,17 @@
-<h2>Change your password</h2>
 
-<%= form_for(current_user, url: '', html: { method: :put }) do |f| %>
 
+<div class="fieldset">
+<br/>
+<h2 style="font-size:30px">Change your password</h2>
+<br/>
+<%= notice %>
+<%= alert %>
+
+<%= form_for(current_user, url: users_profile_update_url, html: { method: :put }) do |f| %>
 
   <%= f.hidden_field :reset_password_token %>
-
   <div class="field">
-    <%= f.label :password, "New password" %><br />
+    <%= f.label :password, "New password" %><br/>
     <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
   </div>
 
@@ -19,3 +24,4 @@
     <%= f.submit "Change my password" %>
   </div>
 <% end %>
+</div>
